[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/back.png" type="Texture" id=1]
[ext_resource path="res://src/menu/shop.gd" type="Script" id=2]
[ext_resource path="res://assets/Born2bSportyV2.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 500.0
margin_bottom = 770.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
margin_left = 235.0
margin_top = 78.0
margin_right = 483.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy" type="Button" parent="TextureRect/HBoxContainer"]
margin_right = 77.0
margin_bottom = 50.0
text = "Buy Edges"

[node name="EDGE" type="Label" parent="TextureRect/HBoxContainer"]
margin_left = 81.0
margin_top = 9.0
margin_right = 188.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "    EDGES:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="premiumCurency" type="Label" parent="TextureRect/HBoxContainer"]
margin_left = 192.0
margin_top = 18.0
margin_right = 192.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 140.0
margin_right = 500.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
margin_left = 100.0
margin_top = 103.0
margin_right = 400.0
margin_bottom = 457.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 300.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer/VBoxContainer2/CenterContainer"]
margin_right = 300.0
margin_bottom = 300.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 300 )
color = Color( 0, 0.05896, 0.539063, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/CenterContainer"]
margin_left = 32.0
margin_top = 108.0
margin_right = 268.0
margin_bottom = 192.0

[node name="premiumskin" type="CheckButton" parent="CenterContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 40.0
text = "premium skin - 50edges"

[node name="premium smth" type="CheckButton" parent="CenterContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 236.0
margin_bottom = 84.0
text = "premiumsmth"

[node name="menu" type="Button" parent="CenterContainer/VBoxContainer2"]
margin_top = 304.0
margin_right = 300.0
margin_bottom = 354.0
rect_min_size = Vector2( 250, 50 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureRect/HBoxContainer/buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/CenterContainer/VBoxContainer/premiumskin" to="." method="_on_premiumskin_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/CenterContainer/VBoxContainer/premium smth" to="." method="_on_premium_smth_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/menu" to="." method="_on_menu_pressed"]
